syntax = "proto3";


option go_package = "grpcrest/proto;auth";

import "google/api/annotations.proto";

message CreateAuthRequest {
    string user_id = 1;
    string email = 2;
    string password = 3;
}

message CreateAuthResponse {
    string message = 1;
}

service CreateAuthService {
    rpc CreateAuth(CreateAuthRequest) returns (CreateAuthResponse);
}

